// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stateful Component returns import with correct suffix: css when approach is imported 1`] = `
"import React, { Component } from 'react';
import PropTypes from 'prop-types';
import 'styles.css';

class Header extends Component {
  constructor(props) {
    super(props);
    this.state = {};
  }

  render() {
    return (

    );
  }
}

Header.propTypes = {
};

Header.defaultProps = {
};

export default Header;
"
`;

exports[`Stateful Component returns import with correct suffix: less when approach is imported 1`] = `
"import React, { Component } from 'react';
import PropTypes from 'prop-types';
import 'styles.less';

class Header extends Component {
  constructor(props) {
    super(props);
    this.state = {};
  }

  render() {
    return (

    );
  }
}

Header.propTypes = {
};

Header.defaultProps = {
};

export default Header;
"
`;

exports[`Stateful Component returns import with correct suffix: sass when approach is imported 1`] = `
"import React, { Component } from 'react';
import PropTypes from 'prop-types';
import 'styles.sass';

class Header extends Component {
  constructor(props) {
    super(props);
    this.state = {};
  }

  render() {
    return (

    );
  }
}

Header.propTypes = {
};

Header.defaultProps = {
};

export default Header;
"
`;

exports[`Stateful Component returns import with correct suffix: scss when approach is imported 1`] = `
"import React, { Component } from 'react';
import PropTypes from 'prop-types';
import 'styles.scss';

class Header extends Component {
  constructor(props) {
    super(props);
    this.state = {};
  }

  render() {
    return (

    );
  }
}

Header.propTypes = {
};

Header.defaultProps = {
};

export default Header;
"
`;

exports[`Stateful Component returns name as component/propTypes/defaultProps/export 1`] = `
"import React, { Component } from 'react';
import PropTypes from 'prop-types';
undefined

class Header extends Component {
  constructor(props) {
    super(props);
    this.state = {};
  }

  render() {
    return (

    );
  }
}

Header.propTypes = {
};

Header.defaultProps = {
};

export default Header;
"
`;

exports[`Stateful Component returns radium import when styling is radium 1`] = `
"import React, { Component } from 'react';
import PropTypes from 'prop-types';
import radium from 'radium';

class Header extends Component {
  constructor(props) {
    super(props);
    this.state = {};
  }

  render() {
    return (

    );
  }
}

Header.propTypes = {
};

Header.defaultProps = {
};

export default Header;
"
`;

exports[`Stateful Component returns styles from javascript import when approach is styled components 1`] = `
"import React, { Component } from 'react';
import PropTypes from 'prop-types';
import styles from './styles';

class Header extends Component {
  constructor(props) {
    super(props);
    this.state = {};
  }

  render() {
    return (

    );
  }
}

Header.propTypes = {
};

Header.defaultProps = {
};

export default Header;
"
`;

exports[`Stateful Component returns styles import with correct suffix: css when approach is css-modules 1`] = `
"import React, { Component } from 'react';
import PropTypes from 'prop-types';
import styles from './styles.css';

class Header extends Component {
  constructor(props) {
    super(props);
    this.state = {};
  }

  render() {
    return (

    );
  }
}

Header.propTypes = {
};

Header.defaultProps = {
};

export default Header;
"
`;

exports[`Stateful Component returns styles import with correct suffix: less when approach is css-modules 1`] = `
"import React, { Component } from 'react';
import PropTypes from 'prop-types';
import styles from './styles.less';

class Header extends Component {
  constructor(props) {
    super(props);
    this.state = {};
  }

  render() {
    return (

    );
  }
}

Header.propTypes = {
};

Header.defaultProps = {
};

export default Header;
"
`;

exports[`Stateful Component returns styles import with correct suffix: sass when approach is css-modules 1`] = `
"import React, { Component } from 'react';
import PropTypes from 'prop-types';
import styles from './styles.sass';

class Header extends Component {
  constructor(props) {
    super(props);
    this.state = {};
  }

  render() {
    return (

    );
  }
}

Header.propTypes = {
};

Header.defaultProps = {
};

export default Header;
"
`;

exports[`Stateful Component returns styles import with correct suffix: scss when approach is css-modules 1`] = `
"import React, { Component } from 'react';
import PropTypes from 'prop-types';
import styles from './styles.scss';

class Header extends Component {
  constructor(props) {
    super(props);
    this.state = {};
  }

  render() {
    return (

    );
  }
}

Header.propTypes = {
};

Header.defaultProps = {
};

export default Header;
"
`;
